chore: fixed all views [mobile x desktop] bugy: tablet layout overflowing

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -1,5 +1,9 @@
 .Header {
-    @media (min-width: 1024px) {
-        box-shadow: 0px 0px 1px rgba(12, 26, 75, 0.24), 0px 3px 8px -1px rgba(50, 50, 71, 0.05);
-    }
+  @media (min-width: 1024px) {
+    box-shadow: 0px 0px 1px rgba(12, 26, 75, 0.24),
+      0px 3px 8px -1px rgba(50, 50, 71, 0.05);
+  }
+  @media (max-width: 768px) {
+    // margin-left: 10rem;
+  }
 }
